Revert "Simplified impl"
This reverts commit c289289c256aeb158f4827edd855454c93241c71.